// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Card should allow skipping title 1`] = `
.css-j7k7y6,
[data-css-j7k7y6] {
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
  margin: 0 auto 20px;
  padding: 20px;
  border: solid 1px rgba(0, 0, 0, 0.2);
  background: #FFF;
}

<div
  className="ui container css-j7k7y6"
>
  Content
</div>
`;

exports[`Component: Card should render with title and children 1`] = `
.css-j7k7y6,
[data-css-j7k7y6] {
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
  margin: 0 auto 20px;
  padding: 20px;
  border: solid 1px rgba(0, 0, 0, 0.2);
  background: #FFF;
}

.css-y2vsc,
[data-css-y2vsc] {
  color: #00573d !important;
}

<div
  className="ui container css-j7k7y6"
>
  <h1
    className="ui header css-y2vsc"
  >
    Title
  </h1>
  Content
</div>
`;
